demos/health/health-demo.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-demo
  template:
    metadata:
      labels:
        app: health-demo
    spec:
      containers:
      - name: health-demo
        image: python
        command:
        - sh
        - -c
        - |
          cd /tmp
          echo $POD_NAME > pod_name
          touch readiness
          touch liveness
          python -m http.server 8080
        ports:
        - containerPort: 8080
        readinessProbe:
          exec:
            command:
            - cat
            - /tmp/readiness
          periodSeconds: 5
        livenessProbe:
          exec:
            command:
            - cat
            - /tmp/liveness
          periodSeconds: 5
