demos/health/health-demo.service.yml
apiVersion: v1
kind: Service
metadata:
  name: health-demo
spec:
  selector:
    app: health-demo
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
